6、load-balancer/1-local.yaml

apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
spec:
  selector:
    app: phpmyadmin
  ports:
    - port: 8081
      targetPort: 80
  type: ClusterIP
