6、load-balancer/1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service-ci
spec:
  selector:
    app: phpmyadmin
  ports:
    - port: 8081
      targetPort: 80
  type: ClusterIP
---

apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service-np
spec:
  selector:
    app: phpmyadmin
  ports:
    - port: 8082
      targetPort: 80
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service-lb
spec:
  selector:
    app: phpmyadmin
  ports:
    - port: 8083
      targetPort: 80
  type: LoadBalancer
