6、load-balancer/3-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service-lb
spec:
  selector:
    app: phpmyadmin
  ports:
    - port: 8082
      targetPort: 80
  type: LoadBalancer
